<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/sort_modes">
        <item
            android:id="@+id/option_sort_name"
            android:title="@string/lbl_name" />
        <item
            android:id="@+id/option_sort_album"
            android:title="@string/lbl_album" />
        <item
            android:id="@+id/option_sort_year"
            android:title="@string/lbl_date" />
        <item
            android:id="@+id/option_sort_duration"
            android:title="@string/lbl_duration" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/sort_direction">
        <item
            android:id="@+id/option_sort_asc"
            android:title="@string/lbl_sort_asc" />
        <item
            android:id="@+id/option_sort_dec"
            android:title="@string/lbl_sort_dec" />
    </group>
</menu>