<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="android.widget.FrameLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <org.oxycblt.auxio.playback.IndicatorMaterialButton
            android:id="@+id/playback_repeat"
            style="@style/Widget.Auxio.Button.Icon.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:contentDescription="@string/desc_change_repeat"
            app:icon="@drawable/ic_repeat"
            app:iconTint="@color/sel_accented"
            app:layout_constraintBottom_toBottomOf="@+id/playback_skip_prev"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/playback_skip_prev" />

        <Button
            android:id="@+id/playback_skip_prev"
            style="@style/Widget.Auxio.Button.Icon.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_skip_prev"
            app:icon="@drawable/ic_skip_prev"
            app:layout_constraintBottom_toBottomOf="@+id/playback_play_pause"
            app:layout_constraintEnd_toStartOf="@+id/playback_play_pause"
            app:layout_constraintStart_toEndOf="@+id/playback_repeat"
            app:layout_constraintTop_toTopOf="@+id/playback_play_pause" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/playback_play_pause"
            style="@style/Widget.Auxio.FloatingActionButton.PlayPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_play_pause"
            android:src="@drawable/sel_playing_state"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_play" />

        <Button
            android:id="@+id/playback_skip_next"
            style="@style/Widget.Auxio.Button.Icon.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_skip_next"
            app:icon="@drawable/ic_skip_next"
            app:layout_constraintBottom_toBottomOf="@+id/playback_play_pause"
            app:layout_constraintEnd_toStartOf="@+id/playback_shuffle"
            app:layout_constraintStart_toEndOf="@+id/playback_play_pause"
            app:layout_constraintTop_toTopOf="@+id/playback_play_pause" />

        <org.oxycblt.auxio.playback.IndicatorMaterialButton
            android:id="@+id/playback_shuffle"
            style="@style/Widget.Auxio.Button.Icon.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:contentDescription="@string/desc_shuffle"
            app:icon="@drawable/ic_shuffle"
            app:iconTint="@color/sel_accented"
            app:layout_constraintBottom_toBottomOf="@+id/playback_skip_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/playback_skip_next"
            app:tint="@color/sel_accented" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>